asm_tests/other_testfiles/invalid_files/error9.s
.name "MORO"
.comment "MORJESTA!"

sub r1, %12, r1
